# metabase-tools

./: .buildinfo  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  Card.html  Collection.html  Core.html  Database.html  Dockerfile  Exceptions.html  Install.html  Installation.html  MANIFEST.in  MetabaseApi.html  MetabaseGeneric.html  README.md  Tools.html  User.html  basic_usage.html  configure_docker.py  docker-compose.yaml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  usage.html
.devcontainer/: devcontainer.json  postCreateCommands.sh
.doctrees/: Card.doctree  Collection.doctree  Core.doctree  Database.doctree  Exceptions.doctree  Install.doctree  MetabaseApi.doctree  MetabaseGeneric.doctree  Tools.doctree  User.doctree  basic_usage.doctree  environment.pickle  index.doctree
.github/workflows/: Gen Docs.yml  Package Testing.yml  Pub Docs.yml  Publish.yml  Test.yml  codeql-analysis.yml  publish.yml  run-tests.yml  sphinx.yml
_sources/: Card.rst.txt  Core.rst.txt  Exceptions.rst.txt  MetabaseApi.rst.txt  Tools.rst.txt  index.rst.txt  usage.rst.txt
_static/: download_queries.py  metabase_token
_static/basic_usage/: archive_many_cards.py  get_cards.py
docs/: requirements.txt
docs/source/: Basic Usage.rst  Card.rst  Collection.rst  Core.rst  Database.rst  Install.rst  MetabaseApi.rst  MetabaseGeneric.rst  Tools.rst  User.rst  basic_usage.rst  conf.py  index.rst
docs/source/examples/Core/: auth_with_password.py  auth_with_token_dict.py  auth_with_token_file.py  caching_tokens.py
docs/source/examples/basic_usage/: archive_card.py
examples/: get_all_cards.py
metabase_tools/: __init__.py  _version.py  common.py  exceptions.py  metabase.py  metabase_api.py  rest.py  rest_adapter.py  server_settings.py  tools.py
metabase_tools/endpoint/: cards_endpoint.py  collection_endpoint.py  database_endpoint.py  generic_endpoint.py  user_endpoint.py
metabase_tools/endpoints/: activity_endpoint.py  alerts_endpoint.py  cards_endpoint.py  collections_endpoint.py  dashboard_endpoint.py  databases_endpoint.py  generic_endpoint.py  users_endpoint.py
metabase_tools/models/: __init__.py  activity_model.py  alert_model.py  card.py  card_model.py  collection.py  collection_model.py  dashboard_model.py  database.py  database_model.py  generic.py  generic_model.py  generic_models.py  metabase_objects.py  result.py  server_settings.py  user.py  user_model.py
metabase_tools/tools/: __init__.py  metabase_tools.py  tools.py
metabase_tools/utils/: logging_utils.py
tests/: configure_docker.py  conftest.py  helpers.py  metabase_details.py  setup_metabase.py  test_activity.py  test_alert.py  test_api.py  test_card.py  test_collection.py  test_dashboard.py  test_database.py  test_metabase_tools.py  test_rest.py  test_settings.py  test_tools.py  test_user.py
tests/data/: mapping.json
tests/data/Development/: Accounting Question.sql  Test Create.sql
tests/data/Development/Accounting/: Test Card.sql
tests/models/: test_card.py  test_collection.py  test_database.py  test_settings.py  test_user.py
