[tool.poetry]
name = "metabase-tools"
version = "0.1.0"
description = "Unofficial API wrapper for Metabase plus additional helper tools"
authors = ["Josh Odell <josh@notablefi.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
pydantic = "^1.9.1"
typing-extensions = "^4.3.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
versioneer = "^0.22"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
