[metadata]
name = metabase-tools
author = Josh Odell
author_email = j01101111sh@gmail.com
description = Unofficial API wrapper for Metabase plus additional helper tools
long_description = file: README.md
long_description_content_type = text/markdown
test_suite = tests
url = https://github.com/j01101111sh/metabase-tools
project_urls =
    Bug Tracker = https://github.com/j01101111sh/metabase-tools/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages=find:
python_requires = >=3.10

[options.packages.find]
where = 
