[metadata]
name = metabase-tools
author = Josh Odell
author_email = j01101111sh@gmail.com
description = Unofficial API wrapper for Metabase plus additional helper tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/j01101111sh/metabase-tools
project_urls =
    Bug Tracker = https://github.com/j01101111sh/metabase-tools/issues
    Documentation = https://j01101111sh.github.io/metabase-tools/
    Source Code = https://github.com/j01101111sh/metabase-tools
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages=find:
python_requires = >=3.9

[options.packages.find]
where = 
