[metadata]
name = metabase-tools
author = Josh Odell
author_email = j01101111sh@gmail.com
description = Unofficial API wrapper for Metabase plus additional helper tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/j01101111sh/metabase-tools
project_urls =
    Bug Tracker = https://github.com/j01101111sh/metabase-tools/issues
    Documentation = https://j01101111sh.github.io/metabase-tools/
    Source Code = https://github.com/j01101111sh/metabase-tools
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Cython
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Typing :: Typed

[options]
packages=find:
python_requires = >=3.10
install_requires =
    requests>=2.28.1
    pydantic>=1.9.1
    types-requests>=2.28.9
    wrapt>=1.14.1

[options.packages.find]
where =
